4-29 개인과제 Level 2 6번째 요구사항